Fix JPA entity mappings and JWT handling for test compatibility
This commit resolves multiple build and test failures:

Entity Mapping Fixes:
- Add composite key classes (GroupPermissionId, RolePermissionId, UserGroupId)
- Fix @JoinColumn mappings in GroupPermission to prevent duplicate column errors
- Fix @JoinColumn mappings in RolePermission to prevent duplicate column errors
- Fix @JoinColumn mappings in UserGroup to prevent duplicate column errors
- Correct JPA relationships for many-to-many join tables with additional columns

JWT Service Improvements:
- Add Base64 validation for JWT secret before decoding
- Support both Base64-encoded and plain text secrets
- Prevent IllegalArgumentException on non-Base64 secrets in test environment

Refresh Token Service:
- Add missing HexFormat import for token fingerprinting

Configuration:
- Remove reference to non-existent WebConfig class from CorsConfig imports

All 22 tests now pass successfully:
- LimsApplicationTests: 1 passed
- JwtServiceTest: 7 passed
- RefreshTokenServiceTest: 6 passed
- AuthControllerTest: 8 passed

Build: SUCCESS (20s on ARM64)
Closes: Build failures related to JPA mappings and JWT secret handling